# 99-haskell-problems

./: 99H.cabal  README.md
11to20-lists/: Exercise11.hs  Exercise12.hs  Exercise13.hs  Exercise14.hs  Exercise15.hs  Exercise16.hs  Exercise17.hs  Exercise18.hs  Exercise19.hs  Exercise20.hs  ExerciseIndex.hs  Spec.hs  ex-11.hs  ex-13.hs  ex-14.hs  ex-15.hs  ex-16.hs  ex-18.hs  ex-19.hs  exercises.hs
1to10-lists/: Exercise1.hs  Exercise10.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  ExerciseIndex.hs  Spec.hs  exercises.hs  spec.hs
21to28-lists/: Exercise21.hs  Exercise22.hs  Exercise23.hs  Exercise24.hs  Exercise26.hs  Exercise27.hs  Exercise28.hs  ExerciseIndex.hs  ex-25.hs  exercises.hs
src/Exercises/Lists1/: Exercise1.hs  Exercise10.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  Index.hs
src/Exercises/Lists2/: Exercise11.hs  Exercise12.hs  Exercise13.hs  Exercise14.hs  Exercise15.hs  Exercise16.hs  Exercise17.hs  Exercise18.hs  Exercise19.hs  Exercise20.hs  Index.hs
src/Exercises/Lists3/: Exercise21.hs  Exercise22.hs  Exercise23.hs  Exercise24.hs  Exercise25.hs  Exercise26.hs  Exercise27.hs  Exercise28.hs  Index.hs
test/Exercises/: Lists1Spec.hs  Lists2Spec.hs  Lists3Spec.hs
